--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
 		text-align: center;
 	}
 	#uname{
-		background:url(http://demo.mycodes.net/denglu/DIV_CSS_login/images/user.png) rgba(0,0,0,.1) no-repeat;
+		background:url(../static/user.png) rgba(0,0,0,.1) no-repeat;
 		width: 200px;
 		height: 30px;
 		border:solid #ccc 1px;
@@ -46,7 +46,7 @@
 		margin-bottom: 30px;
 	}
 	#password{
-		background: url(http://demo.mycodes.net/denglu/DIV_CSS_login/images/pwd.png) rgba(0,0,0,.1) no-repeat;
+		background: url(../static/pwd.png) rgba(0,0,0,.1) no-repeat;
 		width: 200px;
 		height: 30px;
 		border:solid #ccc 1px;
