--- a/templates/success.html
+++ b/templates/success.html
@@ -9,6 +9,11 @@
      <script src="https://cdn.bootcss.com/bootstrap-table/1.11.1/locale/bootstrap-table-zh-CN.js"></script> 
      <link type="text/css" rel="stylesheet" href="../../static/css/bootstrap.min.css"/>
      <link type="text/css" rel="stylesheet" href="../../static/css/bootstrap-table.min.css"/>
+	<script src="../../static/layui/layui.js"></script>
+	<link type="text/css" rel="stylesheet"
+		href="../../static/layui/css/layui.css" />
+	<link type="text/css" rel="stylesheet"
+		href="../../static/layui/css/global.css" />
 <style type="text/css">
 /* body{
 	margin: 30px;
@@ -17,7 +22,7 @@
 .container{
  margin-left: 250px;
  float: left;
- margin-top: 60px;
+ margin-top: 70px;
  text-align: center;
  width: 80%;
  position: absolute;
@@ -71,7 +76,7 @@
 		</div>
 
 <!--  -->
-	<p class="toolbar">
+	<p class="toolbar" style="margin-bottom: 10px;">
           <a class="btn btn-primary" onclick="add()" href="javascript:"
 				title="添加">添加</a>&nbsp;&nbsp;<a class="btn btn-primary" onclick="update()"
 				href="javascript:" title="编辑">编辑</a>&nbsp;&nbsp;<a
